# simple_c_linkedlist

./: CMakeLists.txt  README.md  blst  kontakt.txt  lst  main.c  main_better.c
